# diet-bot

./: pyproject.toml
bot/: __main__.py  loader.py
bot/handlers/: __init__.py  commands.py  echo.py
utils/: config.py
